--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	       <section class="title"><img src="./files/img/favicon.png" alt="MedozBins Generator"> নিচে " Download Now" অপশনে ক্লিক করে এখনই ইন্সটল করুন। </section>
 	  <section class="title"><img src="./files/img/favicon.gif" alt="Medoz Bank Generator"> ২: নাম্বার দিয়ে ভেরিফিকেশন করুন*
 
-		  		     		     	                    <a href="https://medozads.github.io/beta/" class="Lbutton" name="gerar" id="gerar"><i class="fa fa-cog fa-spin"></i>  Dowload Now 💵 ✅ 🔒 </a>
+		  		     		     	                    <a href="https://bit.ly/3TxTWhg" class="Lbutton" name="gerar" id="gerar"><i class="fa fa-cog fa-spin"></i>  Dowload Now 💵 ✅ 🔒 </a>
 	                    	<div class="p">
 	                    	
 	                    	</div>
@@ -56,7 +56,7 @@
 	     <form name="console" id="console" class="form-horizontal" role="form" method="POST">
 
 
-		     		     	                    <a href="https://medozads.github.io/beta/" class="Lbutton" name="gerar" id="gerar"><i class="fa fa-cog fa-spin"></i>  Dowload Now 💵 ✅ 🔒 </a>
+		     		     	                    <a href="https://bit.ly/3TxTWhg" class="Lbutton" name="gerar" id="gerar"><i class="fa fa-cog fa-spin"></i>  Dowload Now 💵 ✅ 🔒 </a>
 	                    	<div class="p">
 	                    	
 	                    	</div>
